appId: com.dogmomhq.sensemobile
---
- launchApp:
    clearState: false
- repeat:
    times: 5
    commands:
      - extendedWaitUntil:
          visible: "PRACTICE FREE"
          timeout: 45000
      - tapOn: "PRACTICE FREE"
      - tapOn:
          point: "30%,94%"
      - tapOn:
          point: "30%,94%"
      - tapOn:
          point: "30%,94%"
      - tapOn:
          point: "30%,94%"
      - tapOn:
          point: "30%,94%"
      - tapOn:
          point: "30%,94%"
      - extendedWaitUntil:
          visible: "YOU WIN|SO CLOSE|YOU LOST|DEAD HEAT|TIMED OUT|DRAW|PLAY AGAIN|PLAY NOW"
          timeout: 40000
      - tapOn: "HOME"
- extendedWaitUntil:
    visible: "PRACTICE FREE"
    timeout: 20000
- takeScreenshot: shots/loop-done
